--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
+# DO NOT EDIT! This file is written by perl_setup_dist.
+# If needed, you can add content at the end of the file.
+
+/.aspell.en.prepl
+/Makefile
+/Makefile.old
+/MANIFEST
+/MANIFEST.bak
+/blib/
+/cover_db/
+/local/
+/pm_to_blib
+/temp/
+/vendor/
+/*.tar.gz
+*.bak
+*.tdy
+/App-ArduinoBuilder-*/
+
+# End of the template. You can add custom content below this line.
+
 /_build/
 /_test/
 /.vscode/
-/blib/
-/Makefile
-/MYMETA.*
-/pm_to_blib
-/MANIFEST
-/MANIFEST.bak
-/*.tar.gz
-*.sublime-workspace
