Update our tagline abstract.

--- a/dist_setup.conf
+++ b/dist_setup.conf
@@ -3,7 +3,7 @@
 
 {
   name => 'App::ArduinoBuilder',
-  abstract => 'Build system for Arduino programs',
+  abstract => 'All-in-one build system for Arduino programs',
   exe_files => ['script/arduino_builder'],
 
   # The only requirement on 5.26 are indented here docs in the tests.
